[package]
name = "window_tracker_concept"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
widestring = "1.0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24.0"
core-foundation = "0.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.20.0"